--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<version>5.1.45</version>
 		</dependency>
 
+		<!-- https://github.com/google/guava -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>24.0-jre</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
